objects/SLSI__PageRegionWidget__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Page Region</label>
        <referenceTo>SLSI__PageRegion__c</referenceTo>
        <relationshipLabel>Page Region Widgets</relationshipLabel>
        <relationshipName>Page_Region_Widgets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLSI__Widget__c</fullName>
        <label>Widget</label>
        <referenceTo>SLSI__Widget__c</referenceTo>
        <relationshipLabel>Page Region Widgets</relationshipLabel>
        <relationshipName>Page_Region_Widgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Page Region Widget</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>SLSI__Configuration__c</columns>
        <columns>SLSI__Widget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>W{0}</displayFormat>
        <label>Page Region Widget Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Region Widgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SLSI__Unique_Name</fullName>
        <active>false</active>
        <errorConditionFormula>IF( LOWER(VLOOKUP($ObjectType.SLSI__PageRegionWidget__c.Fields.Name ,$ObjectType.SLSI__PageRegionWidget__c.Fields.Name, Name)) = LOWER(Name) &amp;&amp; (ISCHANGED(Name) || ISNEW()) , true, false 
)</errorConditionFormula>
        <errorDisplayField>SLSI__Configuration__c</errorDisplayField>
        <errorMessage>Page Region Widget Id must be unique.</errorMessage>
    </validationRules>
</CustomObject>